# bridgic-browser

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LOGGING.md  Makefile  README.md  README_zh.md  RELEASE.md  SECURITY.md  pyproject.toml
.githooks/: pre-push  pre-receive
.github/workflows/: multi-version-test.yml  release.yml  skill-install-deps-check.yml  windows-cli-test.yml
bridgic/: __init__.py
bridgic/browser/: __init__.py  __main__.py  _cli_catalog.py  _config.py  _constants.py  _redact.py  _timeouts.py  errors.py
bridgic/browser/cli/: __init__.py  _client.py  _commands.py  _daemon.py  _transport.py
bridgic/browser/session/: __init__.py  _browser.py  _browser_model.py  _cdp_discovery.py  _download.py  _errors.py  _launch.py  _locator_utils.py  _snapshot.py  _stealth.py  _video_recorder.py
bridgic/browser/tools/: __init__.py  _browser_action_tools.py  _browser_devtools.py  _browser_dialog_tools.py  _browser_keyboard_tools.py  _browser_mouse_tools.py  _browser_network_tools.py  _browser_screenshot_tools.py  _browser_state_tools.py  _browser_storage_tools.py  _browser_tool_set_builder.py  _browser_tool_spec.py  _browser_tools.py  _browser_verify_tools.py
bridgic/browser/utils/: __init__.py  _browser_utils.py  _logging.py  _schema_helper.py
docs/: API.md  BROWSER_TOOLS_GUIDE.md  CDP_MODE.md  INTERNALS.md  KNOWN_LIMITATIONS.md  SNAPSHOT_AND_STATE.md  W3C_PLAYWRIGHT_PRIORITY_REFERENCE.md
scripts/: download_extensions.py  publish_packages.sh  release.sh  set_publish_credentials.sh  version_check.py
scripts/qa/: cli-command-matrix.md  cli-full-coverage-scenarios.md  collect-artifacts.sh  disabled-button.html  env.sh  inject-modal.html  large-page-generator.py  mode-matrix-scenarios.md  render-cli-coverage-report.py  render-mode-matrix-report.py  run-cli-full-coverage.sh  run-mode-matrix.sh  run-p0-suite.sh  run-sdk-coverage.py  setup-chrome.sh  shake-button.html  stable-flap.html
skills/bridgic-browser/: SKILL.md
skills/bridgic-browser/references/: cli-guide.md  cli-sdk-api-mapping.md  env-vars.md  sdk-guide.md
skills/bridgic-browser/scripts/: deps.ini  install-deps.sh
tests/: __init__.py  conftest.py
tests/fixtures/: diff_for_snapshot.yaml  nested_iframe_l1.html  nested_iframe_l2.html  nested_iframe_test.html  nth_keyspace_test.html  role_text_match_case.html  select_options_test.html  snapshot_options_page.html  test_page.html  test_page_snapshot.yaml
tests/integration/: __init__.py  _chrome_utils.py  test_browser.py  test_cdp_borrowed_mode.py  test_cdp_cli_full.py  test_cdp_lifecycle.py  test_cli_close_race.py  test_cli_long_wait.py  test_click_fallback.py  test_close_artifacts.py  test_nested_iframe.py  test_nth_keyspace.py  test_select_options.py  test_snapshot.py  test_snapshot_concurrency.py  test_tools.py
tests/manual/: test_close_then_open.py
tests/unit/: __init__.py  test_browser.py  test_browser_methods.py  test_cdp_reconnect.py  test_cli.py  test_cli_client_timeout.py  test_client_mode_mismatch.py  test_config.py  test_daemon_cdp_env.py  test_detect_chrome.py  test_download.py  test_find_cdp_url.py  test_get_llm_repr.py  test_screenshot_options.py  test_snapshot_parse.py  test_snapshot_selectors.py  test_snapshot_text.py  test_stealth.py  test_tool_spec.py  test_tools.py  test_utils.py  test_video_recorder.py  test_video_recorder_frame_ts.py
