[project]
name = "bridgic-browser"
version = "0.0.5.dev6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "LLM-driven browser automation library built on Playwright with built-in stealth mode"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tielei Zhang", email = "zhangtl04@gmail.com" },
]

dependencies = [
    "bridgic-core>=0.3.0,<0.4.0",
    "bridgic-llms-openai>=0.1.3,<0.2.0",
    "playwright>=1.57.0,<1.58.0",
    "pydantic>=2.11.10,<2.12.0",
    "click>=8.0",
]

[project.scripts]
bridgic-browser = "bridgic.browser.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--tb=short",
    "--verbose",
    "-ra",  # Show extra test summary info
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # unittest.mock AsyncMock can leak unawaited coroutines (Python cpython#81432)
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require actual browser (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["bridgic/"]

[tool.hatch.build.targets.wheel]
# Use only-include for namespace packages (pkgutil-style)
only-include = ["bridgic"]
